2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (OuterBuffer.send_outer_eof): New method.
	* src/bridge.py (handle_connection): Make sure we don't send a RST to
	the client before it can handle all reply data.

	* src/bridge.py (InvalidReplyError): New class.
	(handle_connection): Raise InvalidReplyError, not InvalidRequestError.
	(bridge_one_request): Handle InvalidReplyError.

	* src/utils.py (readable_fields): New function.
	* src/bridge.py (handle_connection)
	* src/server.py (ServersConnection.read_request): Use
	utils.readable_fields.

	* src/utils.py (copy_data): New function.
	* src/bridge.py (copy_file_data): Rename from copy_data.  Use
	utils.copy_data.  All callers changed.

	* src/utils.py (write_new_file): Rename parameter.

2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (OuterBuffer.read, OuterBuffer.write)
	(OuterBuffer.pending_inner_packets, OuterBuffer.add_outer_data): Add
	debug output.

	* src/double_tls.py (_SplittingBuffer._check_shutdown): Fix variable
	name, don't shut down self.__outer_dst over and over.

	* src/double_tls.py (_ForwardingBuffer._handle_errors)
	(_ForwardingBuffer._receive): Comment on possible combinations of
	PR_POLL_IN with other flags.
	(_CombiningBuffer._handle_errors)
	(_CombiningBuffer.__receive_inner)
	(_CombiningBuffer.__receive_outer)
	(_SplittingBuffer._handle_errors, _SplittingBuffer._receive)
	(_InnerBridgingBuffer._handle_errors)
	(_InnerBridgingBuffer._receive): If PR_POLL_IN is set, ignore
	PR_POLL_HUP and PR_POLL_ERR in this iteration.

2010-04-06  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py: (__next_id, __ids, _id): Uncomment.
	(_debug): New function.  Use everywhere instead of commented-out `print'
	to make debugging easier to enable.
	(_CombiningBuffer._prepare_poll): Fix a debug print pasto.

2010-04-02  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py: Drop some unused imports.

2010-03-19  Miloslav Trmač  <mitr@redhat.com>
